tests/compilation_error/incompatible_array_comparison.ll
int[] a
string[] b

print a == b
